@@ -4597,7 +4597,7 @@ public class Functions implements MacroConstants, Measurements {
 				for(int i=0;i<args.length;i++) {
 					double value = Tools.parseDouble((String)args[i]);
 					if (!Double.isNaN(value)) {
-						args[i] = new Integer((int)value);
+						args[i] = Integer.valueOf((int)value);
 						argClasses[i] = int.class;
 					} else
 						argClasses[i] = args[i].getClass();
@@ -7111,10 +7111,10 @@ public class Functions implements MacroConstants, Measurements {
 			return new Variable(getResult(getRT(null)));
 		else if (name.equals("getColumn"))
 			return getColumn();
-		else if (name.equals("getColumn"))
-			return getColumn();
 		else if (name.equals("columnExists"))
 			return columnExists();
+		else if (name.equals("getString"))
+			return new Variable(getResultString(getRT(null)));
 		else if (name.equals("set"))
 			return setTableValue();
 		else if (name.equals("setColumn"))
