@@ -584,10 +584,10 @@ public class ResultsTable implements Cloneable {
 		setValue(column, row, Double.NaN);
 		if (stringColumns==null)
 			stringColumns = new Hashtable();
-		ArrayList stringColumn = (ArrayList)stringColumns.get(new Integer(column));
+		ArrayList stringColumn = (ArrayList)stringColumns.get(Integer.valueOf(column));
 		if (stringColumn==null) {
 			stringColumn = new ArrayList();
-			stringColumns.put(new Integer(column), stringColumn);
+			stringColumns.put(Integer.valueOf(column), stringColumn);
 		}
 		int size = stringColumn.size();
 		if (row>=size) {
@@ -729,7 +729,7 @@ public class ResultsTable implements Cloneable {
 			double value = columns[col][row];
 			String str = null;
 			if (Double.isNaN(value) && stringColumns!=null) {
-				ArrayList stringColumn = (ArrayList)stringColumns.get(new Integer(col));
+				ArrayList stringColumn = (ArrayList)stringColumns.get(Integer.valueOf(col));
 				if (stringColumn!=null && row>=0 && row<stringColumn.size()) {
 						str = (String)stringColumn.get(row);
 						if (firstValueNumeric && "".equals(str)) {
@@ -790,7 +790,7 @@ public class ResultsTable implements Cloneable {
 		//IJ.log("getValueAsString1: col="+column+ ", row= "+row+", value= "+value+", size="+stringColumns.size());
 		if (Double.isNaN(value) && stringColumns!=null) {
 			String string = "NaN";
-			ArrayList stringColumn = (ArrayList)stringColumns.get(new Integer(column));
+			ArrayList stringColumn = (ArrayList)stringColumns.get(Integer.valueOf(column));
 			if (stringColumn==null)
 				return string;
 			//IJ.log("getValueAsString2: "+column+ +row+" "+stringColumn.size());
@@ -952,7 +952,7 @@ public class ResultsTable implements Cloneable {
 			if (columns[col]!=null) {
 				for (int i=rowIndex; i<counter-1; i++)
 					columns[col][i] = columns[col][i+1];
-				ArrayList stringColumn = stringColumns!=null?(ArrayList)stringColumns.get(new Integer(col)):null;
+				ArrayList stringColumn = stringColumns!=null?(ArrayList)stringColumns.get(Integer.valueOf(col)):null;
 				if (stringColumn!=null && stringColumn.size()==counter) {
 					for (int i=rowIndex; i<counter-1; i++)
 						stringColumn.set(i,stringColumn.get(i+1));
